# RacksDB

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  pre-commit.yml
assets/: README.md  update-assets  update-branding
assets/screenshots/: build.yaml
docs/: Makefile  README.md  antora.yml  generate-changelog.sh  update-materials
docs/man/: racksdb-rest-api.adoc  racksdb-web.adoc  racksdb.adoc
docs/modules/db/: nav.adoc
docs/modules/db/examples/: datacenter.yml  infrastructure.yml  types.yml
docs/modules/db/pages/: concepts.adoc  def.adoc  ext.adoc  files.adoc  positioning-equipments.adoc  positioning-racks.adoc  positionning-equipments.adoc  positionning-racks.adoc  schema.adoc  structure.adoc
docs/modules/db/partials/: deftypes.adoc  objects.adoc  prop-types.adoc  symbols.adoc
docs/modules/install/: nav.adoc
docs/modules/install/pages/: quickstart.adoc
docs/modules/install/partials/: pip-deps.adoc
docs/modules/misc/: nav.adoc
docs/modules/misc/pages/: releases.adoc
docs/modules/overview/: nav.adoc
docs/modules/overview/pages/: overview.adoc  start.adoc
docs/modules/usage/: nav.adoc
docs/modules/usage/attachments/: openapi.yml
docs/modules/usage/examples/: custom.json  custom.yml  racksdb.yml
docs/modules/usage/images/: raw  shadowed
docs/utils/: build.yaml  drawings-schema-objs.py  gen-openapi.py  schema-objs.adoc.j2  schema-objs.py
examples/: mercury.yml
examples/datacenters.l/: paris.yml
examples/db/datacenters/: london.yml  paris.yml
examples/db/datacenters.l/: paris.yml
examples/db/infrastructures/: jupiter.yml  mercury.yml  sharednet.yml
examples/db/infrastructures.l/: mercury.yml
examples/db/types/: racks.yml
examples/extensions/: extensions.yml
examples/extensions/db/: datacenters  datacenters.l  infrastructures  infrastructures.l  power.yml
examples/simple/: racksdb.yml
examples/types/nodes.l/: dellr550.yml  hpesyn480.yml  sm610u.yml
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
frontend/public/: config.json
frontend/src/: App.vue  main.ts
frontend/src/components/: BreadCrumbs.vue  ComboBox.vue  DatacenterListInfrastructures.vue  EquipmentTypeModal.vue  FiltersBar.vue  HeaderPage.vue  HomeViewCards.vue  InfrastructureFilters.vue  InfrastructureTable.vue
frontend/src/composables/: RacksDBAPI.ts
frontend/src/plugins/: http.ts  runtimeConfiguration.ts
frontend/src/router/: index.ts
frontend/src/views/: DatacenterDetailsView.vue  DatacenterRoomView.vue  DatacentersView.vue  HomeView.vue  InfrastructureDetailsView.vue  InfrastructuresView.vue
frontend/tests/: setup.ts
frontend/tests/components/: BreadCrumbs.spec.ts  ComboBox.spec.ts  DatacenterListInfrastructures.spec.ts  EquipmentTypeModal.spec.ts  FiltersBar.spec.ts  HeaderPage.spec.ts  HomeViewCards.spec.ts  InfrastructureFilters.spec.ts  InfrastructureTable.spec.ts
frontend/tests/views/: DatacenterDetailsView.spec.ts  DatacenterRoomView.spec.ts  DatacentersView.spec.ts  HomeView.spec.ts  InfrastructureDetailsView.spec.ts  InfrastructuresView.spec.ts
racksdb/: __init__.py  base.py  bases.py  db.py  draw.py  env.py  errors.py  exec.py  schema.py  version.py  views.py
racksdb/drawers/: __init__.py  axonometric_infrastructure.py  base.py  infrastructure.py  parameters.py  room.py
racksdb/drawers/coordinates/: __init__.py  base.py  json.py  yaml.py
racksdb/drawers/dtypes/: hexcolor.py
racksdb/dtypes/: angle.py  bits.py  bytes.py  dimension.py  netif_type.py  rack_height.py  rack_width.py  storage_type.py  watts.py
racksdb/generic/: db.py  definedtype.py  dumper.py  errors.py  openapi.py  schema.py  views.py
racksdb/generic/dumpers/: __init__.py  _common.py  console.py  json.py  yaml.py
racksdb/tests/: test_defined_type_hexcolor.py  test_defined_type_watts.py  test_drawer.py  test_env.py  test_exec.py  test_racksdb.py  test_schema.py  test_schema_defined_type_loader.py  tests_db_load.py
racksdb/tests/drawers/: test_axonometric_infrastructure.py  test_base.py  test_infrastructure.py  test_parameters.py
racksdb/tests/generic/: test_db.py  test_db_dict.py  test_db_list.py  test_db_loader.py  test_openapi.py  test_schema.py  test_schema_defined_type_loader.py  test_schema_file_loader.py  test_views.py
racksdb/tests/lib/: common.py  params.py  reference.py  web.py
racksdb/tests/web/: test_app.py  test_blueprint.py
racksdb/types/: __init__.py  bytes.py  dimension.py  netif_type.py  node.py  rack_height.py  rack_width.py  storage_type.py
racksdb/web/: api.py  app.py  test.py
racksdb/web/frontend/: package-lock.json  package.json
racksdb/web/ui/: index.html  package-lock.json  package.json  tailwind.config.js
schema/: drawings.yml  racksdb.yml
schemas/: drawings.yml  racksdb.yml
(+87 files in other folders)
