[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RacksDB"
version = "0.3.0"
description = "Modelize your datacenters infrastructures in YAML database"
license = {text = "GPLv3+"}
requires-python = ">=3.6"
keywords = ["cmdb", "inventory", "yaml", "datacenters", "racks", "hpc", "cluster"]
authors = [
    {name = "Rémi Palancher", email = "remi@rackslab.io"},
]
dependencies = [
    "PyYAML",
    "ClusterShell",
    "pycairo",
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: System :: Clustering",
    "Topic :: System :: Systems Administration",
]

[project.optional-dependencies]
web = [
    "Flask",
    "Flask-Cors",
]

[project.scripts]
racksdb = "racksdb.exec:RacksDBExec.run"
racksdb-web = "racksdb.web.app:RacksDBWebApp.run"

[tool.setuptools.packages.find]
include = ["racksdb*"]
exclude = ["racksdb.web.ui*"]

[project.urls]
"Homepage" = "https://github.com/rackslab/RacksDB"
"Bug Tracker" = "https://github.com/rackslab/RacksDB/issues"

# Do not automatically install all files in package tree as data files. This is
# especially required for files under UI folder that could be could considered
# data files even though they are explicitely excluded from packages search
# paths.
[tool.setuptools]
include-package-data = false

[tool.black]
target-version = ['py36']
color = 1

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
target-version = "py37"
